<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ForecastFragment"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:background="#ADD8E6">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="61dp"
                android:layout_height="50dp"
                android:text="@string/monday">

            </TextView>

            <TextView
                android:layout_width="61dp"
                android:layout_height="50dp"
                android:text="@string/tuesday">

            </TextView>
            <TextView
                android:layout_width="61dp"
                android:layout_height="50dp"
                android:text="@string/wednesday">

            </TextView>
            <TextView
                android:layout_width="61dp"
                android:layout_height="50dp"
                android:text="@string/thursday">

            </TextView>
            <TextView
                android:layout_width="61dp"
                android:layout_height="50dp"
                android:text="@string/friday">

            </TextView>
            <TextView
                android:layout_width="61dp"
                android:layout_height="50dp"
                android:text="@string/saturday">

            </TextView>
            <TextView
                android:layout_width="61dp"
                android:layout_height="50dp"
                android:text="@string/sunday">

            </TextView>
            <TextView
                android:layout_width="61dp"
                android:layout_height="50dp"
                android:text="@string/monday">

            </TextView>
            <TextView
                android:layout_width="61dp"
                android:layout_height="50dp"
                android:text="@string/tuesday">

            </TextView>
            <TextView
                android:layout_width="61dp"
                android:layout_height="50dp"
                android:text="@string/wednesday">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/cloud">

            </ImageView>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/rain">

            </ImageView>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/rain">

            </ImageView>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/sunandrain">

            </ImageView>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/cloud">

            </ImageView>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/cloud">

            </ImageView>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/storm">

            </ImageView>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/sunandrain">

            </ImageView>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/rain">

            </ImageView>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/sunandrain">

            </ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/partly_cloudy">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/d24C_31C">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/showers">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/d24C_30C">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/rain">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/d22C_23C">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/scattered_showers">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/d22C_27C">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/mostly_cloudy">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/d22C_30C">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/partly_cloudy">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/d24C_31C">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/thunderstorm">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/d25C_28C">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/scattered_thunderstorm">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/d24C_27C">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/showers">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/d24C_26C">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/scattered_thunderstorm">

            </TextView>
            <TextView
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:text="@string/d23C_27C">

            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>